dark/light mode toggles + css

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -51,7 +51,7 @@ html
     block extra_js
 
 
-  body(style="overflow-x:hidden;touch-action: manipulation;")
+  body(style="overflow-x:hidden;touch-action: manipulation;" id="body")
     include nodeTubeCss
 
     //layout.pug
