--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -43,7 +43,7 @@ style.
     cursor: pointer;
   }
 
-.navbar.navbar-default.navbar-fixed-top(style="background-color:rgb(24,55,147)")
+.navbar.navbar-default.navbar-fixed-top(style="" id="header-color-blue")
   .container
     .navbar-header
       button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
@@ -70,10 +70,6 @@ style.
 
         li(class=(title == 'Search') ? 'active' : undefined)
           a(href=`/search`) Search
-        
-        li(class=(title == 'Dark'))
-          a
-            button(onclick="toggleDarkLight()" class="link-button") DARK MODE
             
         li.subscribed-link(class=(title == 'Subscriptions') ? 'active' : undefined)
           if user && user.unseenSubscriptionUploads || user && user.unseenSubscriptionUploads == 0
@@ -206,9 +202,24 @@ if !user
 if 1==1 
 script.
   document.getElementById("body").className = localStorage.getItem("darkLight");
+  if (body.className === "light-mode") {
+    document.getElementById("header-color-blue").style.backgroundColor = "rgb(24,55,147)";
+  } else {
+    document.getElementById("header-color-blue").style.backgroundColor = "#1c1c1c";
+  }
   function toggleDarkLight() {
     var body = document.getElementById("body");
     var currentClass = body.className;
     body.className = currentClass == "dark-mode" ? "light-mode" : "dark-mode";
     localStorage.setItem('darkLight', body.className);
+    if (localStorage.getItem("darkLight") === "dark-mode") {
+      document.getElementById("dark-mode-button").innerHTML = "[Light Mode]"
+    } else  if (localStorage.getItem("darkLight") === "light-mode") {
+      document.getElementById("dark-mode-button").innerHTML = "[Dark Mode]"
+    }
+    if (body.className === "light-mode") {
+      document.getElementById("header-color-blue").style.backgroundColor = "rgb(24,55,147)";
+    } else {
+    document.getElementById("header-color-blue").style.backgroundColor = "#1c1c1c";
+    }
   }
