--- a/views/viewPartials/uploadDetails.pug
+++ b/views/viewPartials/uploadDetails.pug
@@ -15,9 +15,9 @@ style.
 // all the details including title
 
 // UPLOAD TITLE
-a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.uniqueTag}` style="color:black" )
+a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.uniqueTag}` style="color:black" target="_parent")
     div
-        p.balance-text.upload-title-text(style="width:100%;margin:0 auto;margin-top:11px;margin-bottom:7px;") #{upload.title} &nbsp
+        p.balance-text.upload-title-text(style="width:100%;margin:0 auto;margin-top:11px;margin-bottom:7px;color:gray;") #{upload.title} &nbsp
 
             if upload.fileType == 'video'
                 i.fa.fa-video-camera(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;")
@@ -29,27 +29,27 @@ a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.
 // shows view amount, username and if recent also time ago
 div.random-thing(style="margin-top:-4px;")
     // view amount
-    p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;") #{upload.legitViewAmount} views &nbsp
+    p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;color:gray;") #{upload.legitViewAmount} views &nbsp
         // upload time ago
 
         // if its not sorted by popular (aka recent or other thing on user page)
         if !within
             p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;")
-                a.upload-user-text.views-text(href=`/user/${upload.uploader.channelUrl}` style="margin:0;text-align:center;display:inline;") #{upload.uploader.channelName || upload.uploader.channelUrl}
+                a.upload-user-text.views-text(href=`/user/${upload.uploader.channelUrl}` style="margin:0;text-align:center;display:inline;color:gray;" target="_parent") #{upload.uploader.channelName || upload.uploader.channelUrl}
 
-            p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;") &nbsp uploaded #{upload.timeAgo} &nbsp
+            p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;color:gray;") &nbsp uploaded #{upload.timeAgo} &nbsp
 
             // if sorted by popular
         else
             // username
             p.upload-title-text.views-text(style="margin:0 auto;text-align:center;display:inline;") &nbsp
-                a.upload-user-text.views-text(href=`/user/${upload.uploader.channelUrl}` style="margin:0;text-align:center;display:inline;") #{upload.uploader.channelName || upload.uploader.channelUrl}
+                a.upload-user-text.views-text(href=`/user/${upload.uploader.channelUrl}` style="margin:0;text-align:center;display:inline;color:gray;" target="_parent") #{upload.uploader.channelName || upload.uploader.channelUrl}
 
 
 // show views within time if on popular page
 div.upload-thing
     if within
-        p.upload-title-text.views-text(style="margin-top:-8px") #{upload[popularTimeViews]} #{withinDisplayString}
+        p.upload-title-text.views-text(style="margin-top:-8px;color:gray;") #{upload[popularTimeViews]} #{withinDisplayString}
 
 
 
