--- a/views/viewPartials/categoryOverviews.pug
+++ b/views/viewPartials/categoryOverviews.pug
@@ -3,7 +3,7 @@ for category in categories
     // if there's more than one per category
     if uploads[category.name] && uploads[category.name].length && uploads[category.name].length > 0
         div.category.col-sm-12
-            a.upload-user-text(href=`${addressPrepend}/${highlightedNumber}?category=${category.name}&within=${within}&media=${mediaType || ''}`)
+            a.upload-user-text(href=`${addressPrepend}/1?category=${category.name}&within=${within}&media=${mediaType || ''}`)
                 h1.fw(style="font-size:41px") #{category.displayName}
                 br
 
