add category overview to recent uploads

--- a/views/mediaBrowsing/recentUploads.pug
+++ b/views/mediaBrowsing/recentUploads.pug
@@ -41,7 +41,7 @@ block content
 
         hr
         div.uploads.container
-            if !isACategory
+            if !isACategory || category == 'overview'
                 include ../viewPartials/categoryOverviews
 
             else
