--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -202,7 +202,7 @@ if !user
 if 1==1 
 script.
   document.getElementById("body").className = localStorage.getItem("darkLight");
-  if (body.className === "light-mode") {
+  if (body.className === "lights-mode") {
     document.getElementById("header-color-blue").style.backgroundColor = "rgb(24,55,147)";
   } else {
     document.getElementById("header-color-blue").style.backgroundColor = "#1c1c1c";
