--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -180,6 +180,12 @@ style.
               li
                 a.dropdown-anchors(href=`/logout` style="color:white;") Logout
 
+if 1==1
+  script.
+    if (document.getElementById("body").className === "dark-mode") {
+      document.getElementById("dark-mode-button").innerHTML = "[Light Mode]"
+    }
+
 if !user
   script.
     $('.subscribed-link').on('release click', function(e){
@@ -202,7 +208,7 @@ if !user
 if 1==1 
 script.
   document.getElementById("body").className = localStorage.getItem("darkLight");
-  if (body.className === "lights-mode") {
+  if (body.className === "light-mode") {
     document.getElementById("header-color-blue").style.backgroundColor = "rgb(24,55,147)";
   } else {
     document.getElementById("header-color-blue").style.backgroundColor = "#1c1c1c";
