move parts of toggling script to footer.pug to fix double click issue

--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -29,7 +29,8 @@ footer
 
     a.pull-left(style="color:#aaa;margin-right:10px;" href="/termsofservice") Terms Of Service
 
-
-
-
-
+if 1==1
+  script.
+    if (document.getElementById("body").className == "dark-mode") {
+      document.getElementById("dark-mode-button").innerHTML = "[Light Mode]"
+    }
