--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -115,7 +115,7 @@ block content
       //div.col-sm-2
       //      h4
       //        a(href="/" + `${user.channelUrl}` +  "/playlists") Playlists
-      if user && user.plan == 'plus'
+      if user && user.privs && user.privs.livestreaming
         div.col-sm-2
           h3.fw
             a(href="/account/livestreaming") Livestreaming
