--- a/views/mediaPlayerPartials/downloadFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/downloadFunctionalityJs.pug
@@ -11,7 +11,12 @@ script.
   }
 
   function downloadIt() {
-    var name = "#{upload.title}#{upload.fileExtension}"
+    if(uploadType=='video'){
+      var name = "#{upload.title}.mp4"
+    } else {
+      var name = "#{upload.title}#{upload.fileExtension}"
+    }
+
     if (name && name !== '') {
       var link = document.createElement('a');
       link.download = name;
