adding more docs

--- a/views/account/account.pug
+++ b/views/account/account.pug
@@ -566,6 +566,7 @@ block content
         swal('Your profile has been updated')
       }
 
+      // SCROLL TO SELECTED DIV TO HELP USER EXPERIENCE
       var scrollToDiv = getParameterByName('to');
 
       if(scrollToDiv){
