--- a/views/viewPartials/categoryOverviews.pug
+++ b/views/viewPartials/categoryOverviews.pug
@@ -10,7 +10,7 @@ for category in categories
             // begin individual upload section
             each upload in uploads[category.name]
                 if upload.uploader
-                    div.col-sm-4(style="text-align:center;height:335px;")
+                    div.col-xs-12.col-sm-6.col-md-6.col-lg-4(style="text-align:center;height:335px;")
                         div(style="width:100%")
                             include ../viewPartials/uploadThumbnail
 
