moving stuff around a bit

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -70,6 +70,29 @@ html
       include widgets/google-analytics
 
     script(src='/js/main.js')
+    script.
+      document.getElementById("body").className = localStorage.getItem("darkLight");
+      if (body.className === "light-mode") {
+        document.getElementById("header-color-blue").style.backgroundColor = "rgb(24,55,147)";
+      } else {
+        document.getElementById("header-color-blue").style.backgroundColor = "#1c1c1c";
+      }
+      function toggleDarkLight() {
+        var body = document.getElementById("body");
+        var currentClass = body.className;
+        body.className = currentClass == "dark-mode" ? "light-mode" : "dark-mode";
+        localStorage.setItem('darkLight', body.className);
+        if (localStorage.getItem("darkLight") === "dark-mode") {
+          document.getElementById("dark-mode-button").innerHTML = "[Light Mode]"
+        } else if (localStorage.getItem("darkLight") === "light-mode") {
+          document.getElementById("dark-mode-button").innerHTML = "[Dark Mode]"
+        }
+        if (body.className === "light-mode") {
+          document.getElementById("header-color-blue").style.backgroundColor = "rgb(24,55,147)";
+        } else {
+          document.getElementById("header-color-blue").style.backgroundColor = "#1c1c1c";
+        }
+      }
     block extra_footer_js
 
 
