--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -217,3 +217,48 @@ style.
     .navbar-default .navbar-nav > li > a {
         font-size:14px;
     }
+
+
+    .dropdown-anchors {
+        font-size: 12px !important;
+        font-weight: 500 !important;
+        text-transform: uppercase !important;
+        transition: all 0.2s linear !important;
+        color: white !important;
+        font-weight:500 !important;
+    }
+
+    .dropdown-anchors:hover {
+        color: #4da5f4 !important;
+        background-color: transparent;
+    }
+
+    .brandName {
+        font-size:19px;
+    }
+
+    /* Dark mode: */
+    .dark-mode {
+        background-color: #111 !important; //#1a1a1c; //rgba(11, 11, 12, 1); //#181817; //#292322; //rgb(40,44,52); rgb(33,37,43);
+        color: darkgray !important;
+    }
+
+    /* Light mode: */
+    .light-mode {
+        background-color: #fff !important; //#1a1a1c; //rgba(11, 11, 12, 1); //#181817; //#292322; //rgb(40,44,52); rgb(33,37,43);
+        color: black !important;
+    }
+
+    /* changes the dark mode button to look like a link*/
+    .link-button {
+        background: none!important;
+        border: none;
+        padding: 0!important;
+        outline:none;
+        /*optional*/
+        /*font-family: arial, sans-serif;*/
+        /*input has OS specific font-family*/
+        /*color: #069;*/
+        /*text-decoration: underline;*/
+        cursor: pointer;
+    }
