--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -98,7 +98,8 @@
                   a.dropdown-anchors(href=`/admin/subscriptions`) Subscriptions
                 li
                   a.dropdown-anchors(href=`/admin/adminAudit`) Admin Audit
-
+                li
+                  a.dropdown-anchors(href=`/media/recent/recentComments`) Recent Comments
                 // TODO: turning this off because it's not turned on
                 //li
                 //  a.dropdown-anchors(href=`/admin/createSocialPost`) Create Social Post
