--- a/views/viewPartials/darkLightMode.pug
+++ b/views/viewPartials/darkLightMode.pug
@@ -20,12 +20,8 @@ script.
   // get class name from the body
   var currentClassNameOfBody = document.getElementById("body").className;
 
-  var navbarBackgroundColor = document.getElementById("header-color-blue").style.backgroundColor;
-
-
   // if memory says dark mode, no need to do anything since it's set to dark by default
   if(darkLightInMemory == 'dark-mode'){
-    console.log('running here!');
     document.getElementById("header-color-blue").style.backgroundColor = blackNavbarHeader;
     // switch over
   } else if(darkLightInMemory == 'light-mode' && currentClassNameOfBody == 'dark-mode') {
@@ -45,13 +41,15 @@ script.
 
     var darkLightInMemory = localStorage.getItem("darkLight");
 
+    console.log(darkLightInMemory);
+
     var body = document.getElementById("body");
 
     // switch body.className
     if(darkLightInMemory == 'light-mode'){
-      document.getElementById("body").className = 'light-mode';
-    } else {
       document.getElementById("body").className = 'dark-mode';
+    } else {
+      document.getElementById("body").className = 'light-mode';
     }
 
     var modeToChangeTo;
