--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -99,7 +99,7 @@
                 li
                   a.dropdown-anchors(href=`/admin/adminAudit`) Admin Audit
                 li
-                  a.dropdown-anchors(href=`/media/recent/recentComments`) Recent Comments
+                  a.dropdown-anchors(href=`/media/recentComments`) Recent Comments
                 // TODO: turning this off because it's not turned on
                 //li
                 //  a.dropdown-anchors(href=`/admin/createSocialPost`) Create Social Post
