--- a/views/media.pug
+++ b/views/media.pug
@@ -274,7 +274,8 @@ block content
                             input.fw.btn.btn-md.btn-success(type='submit' value="Post Comment" style="border-radius:4px")
 
 
-                // DISPLAY COMMENTS
+                // ** COMMENT DISPLAY **
+                // todo: pull this out into its own partial
 
                 // otherwise display all comments
                 if commentCount == 0
@@ -301,7 +302,7 @@ block content
                                             // TODO: Add it here
                                             div.top-line(style="text-align:left;")
                                                 p.fw(style="text-align:left;display:inline-block;")
-                                                    a(href=`/user/${comment.commenter.channelUrl}` style="color:black;margin-right:5px;") #{comment.commenter.channelName || comment.commenter.channelUrl}
+                                                    a(href=`/user/${comment.commenter.channelUrl}` style="color:#d2d2d2;margin-right:5px;") #{comment.commenter.channelName || comment.commenter.channelUrl}
                                                 p.fw(style="display:inline-block;") - #{comment.timeAgo} &nbsp
                                                     if user && !viewingUserIsBlocked
                                                         a.reply-link(style="cursor:pointer") Reply
@@ -336,7 +337,7 @@ block content
                                                     div(style="display:block;padding-bottom:15px;padding-left:40px;")
                                                         div.top-line(style="text-align:left;")
                                                             p.fw(style="text-align:left;display:inline-block;")
-                                                                a(href=`/user/${responseComment.commenter.channelUrl}` style="color:black;margin-right:5px;") #{responseComment.commenter.channelName || responseComment.commenter.channelUrl}
+                                                                a(href=`/user/${responseComment.commenter.channelUrl}` style="color:#d2d2d2;margin-right:5px;") #{responseComment.commenter.channelName || responseComment.commenter.channelUrl}
                                                             p.fw(style="display:inline-block;") - #{responseComment.timeAgo} &nbsp
                                                         p.fw(style="text-align:left;") #{responseComment.text}
 
