--- a/views/layout.pug
+++ b/views/layout.pug
@@ -60,7 +60,7 @@ html
 
     include viewPartials/darkLightMode
 
-    .container(style="max-width:100%;padding-left: 0px; padding-right: 0px;")
+    .container(style="overflow-x:hidden;max-width:100%;padding-left: 0px; padding-right: 0px;")
       include partials/flash
       block content
 
