--- a/views/media.pug
+++ b/views/media.pug
@@ -9,6 +9,10 @@ block content
             margin-top: 30px;
         }
 
+        .container {
+            overflow-x: hidden;
+        }
+
 
     br
     div.center-block.text-center.col-sm-12
