--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -262,3 +262,11 @@ style.
         /*text-decoration: underline;*/
         cursor: pointer;
     }
+
+    .headroom--pinned {
+        display: block;
+    }
+
+    .headroom--unpinned {
+        display: none;
+    }
