adding some margin

--- a/views/mediaBrowsing/recentUploads.pug
+++ b/views/mediaBrowsing/recentUploads.pug
@@ -52,7 +52,7 @@ block content
 
                 each upload in uploads
                     if upload.uploader
-                        div.col-xs-12.col-sm-6.col-md-6.col-lg-4(style="text-align:center;height:335px;")
+                        div.col-xs-12.col-sm-6.col-md-6.col-lg-4(style="text-align:center;height:335px;margin-bottom:20px;")
                             div(style="width:100%")
                                 include ../viewPartials/uploadThumbnail
 
