--- a/views/viewPartials/uploadDetails.pug
+++ b/views/viewPartials/uploadDetails.pug
@@ -17,7 +17,7 @@ style.
 // UPLOAD TITLE
 a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.uniqueTag}` style="color:black" target="_parent")
     div
-        p.balance-text.upload-title-text(style="width:100%;margin:0 auto;margin-top:11px;margin-bottom:7px;color:gray;") #{upload.title} &nbsp
+        p.balance-text.upload-title-text(style="width:100%;margin:0 auto;margin-top:11px;margin-bottom:7px;color:gray;margin-top:0px;") #{upload.title} &nbsp
 
             if upload.fileType == 'video'
                 i.fa.fa-video-camera(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;")
