zoom in image effect

--- a/views/mediaBrowsing/popularUploads.pug
+++ b/views/mediaBrowsing/popularUploads.pug
@@ -2,6 +2,8 @@ extends ../layout
 
 block content
 
+
+    // the element with the anchor links for 'Last Hour' , 'Last Day', etc
     div.container
         include ../viewPartials/popularUploadsNavbar
 
