--- a/views/viewPartials/uploadThumbnail.pug
+++ b/views/viewPartials/uploadThumbnail.pug
@@ -1,59 +1,60 @@
-a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.uniqueTag}` style="color:black" )
-    if upload.thumbnails && upload.thumbnails.custom
-        img.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.custom}` style="")
+div.holder
+    a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.uniqueTag}` style="color:black" )
+        if upload.thumbnails && upload.thumbnails.custom
+            img.upload-thumbnail.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.custom}` style="")
 
-    else if upload.fileType == 'video' && upload.thumbnails && upload.thumbnails.generated
-        img.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.generated}` style="")
+        else if upload.fileType == 'video' && upload.thumbnails && upload.thumbnails.generated
+            img.upload-thumbnail.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.generated}` style="")
 
-    else if upload.fileType == 'video' && upload.thumbnails && upload.thumbnails.medium
-        img.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.medium}` style="")
+        else if upload.fileType == 'video' && upload.thumbnails && upload.thumbnails.medium
+            img.upload-thumbnail.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.medium}` style="")
 
-    else if upload.fileType == 'video' && !upload.thumbnailUrl
-        img.preview-image(src="/no_img.png")
+        else if upload.fileType == 'video' && !upload.thumbnailUrl
+            img.upload-thumbnail.preview-image(src="/no_img.png")
 
-    else if upload.fileType == 'image'
-        // TODO: have to fix this
-        img.preview-image(src=`${uploadServer}/${channelUrl|| upload.uploader.channelUrl }/${upload.uniqueTag}${upload.fileExtension}` style="")
+        else if upload.fileType == 'image'
+            // TODO: have to fix this
+            img.upload-thumbnail.preview-image(src=`${uploadServer}/${channelUrl|| upload.uploader.channelUrl }/${upload.uniqueTag}${upload.fileExtension}` style="")
 
-    else if upload.fileType == 'audio'
-        img.preview-image(src='/images/audio.svg')
+        else if upload.fileType == 'audio'
+            img.upload-thumbnail.preview-image(src='/images/audio.svg')
 
-    else if upload.fileType == 'unknown'
-        img.preview-image(src='/images/no_img.png')
+        else if upload.fileType == 'unknown'
+            img.upload-thumbnail.preview-image(src='/images/no_img.png')
 
-    if ( upload.fileType == 'audio' || upload.fileType == 'video') && upload.formattedDuration
-        div.duration(style="height:26px;max-width:70px;text-align:center;position:relative;bottom:0;right:0;background-color:black;opacity:0.5; padding: 3px; margin: 0 auto; border-radius: 5px")
-            span(style="color: white") #{upload.formattedDuration}
+if ( upload.fileType == 'audio' || upload.fileType == 'video') && upload.formattedDuration
+    div.duration(style="height:26px;max-width:70px;text-align:center;position:relative;bottom:0;right:0;background-color:black;opacity:0.5; padding: 3px; margin: 0 auto; border-radius: 5px")
+        span(style="color: white") #{upload.formattedDuration}
 
 
-// almost working code
-//a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.uniqueTag}` style="color:black" )
-//    div.preview-image(style="position:relative;margin:0 auto;")
-//        if upload.thumbnails && upload.thumbnails.custom
-//            img.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.custom}` style="")
-//
-//        else if upload.fileType == 'video' && upload.thumbnails && upload.thumbnails.generated
-//            img.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.generated}` style="")
-//
-//        else if upload.fileType == 'video' && upload.thumbnails && upload.thumbnails.medium
-//            img.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.medium}` style="")
-//
-//        else if upload.fileType == 'video' && !upload.thumbnailUrl
-//            img.preview-image(src="/no_img.png")
-//
-//        else if upload.fileType == 'image'
-//            // TODO: have to fix this
-//            img.preview-image(src=`${uploadServer}/${channelUrl|| upload.uploader.channelUrl }/${upload.uniqueTag}${upload.fileExtension}` style="")
-//
-//        else if upload.fileType == 'audio'
-//            img.preview-image(src='/images/audio.svg')
-//
-//        else if upload.fileType == 'unknown'
-//            img.preview-image(src='/images/no_img.png')
-//
-//        if ( upload.fileType == 'audio' || upload.fileType == 'video') && upload.formattedDuration
-//            div.duration(style="height:26px;max-width:70px;text-align:center;position:absolute;bottom:0;right:0;background-color:black;opacity:0.9; padding: 3px; margin: 0 auto; border-radius: 5px")
-//                span(style="color: white") #{upload.formattedDuration}
-//
+    // almost working code
+    //a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.uniqueTag}` style="color:black" )
+    //    div.preview-image(style="position:relative;margin:0 auto;")
+    //        if upload.thumbnails && upload.thumbnails.custom
+    //            img.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.custom}` style="")
+    //
+    //        else if upload.fileType == 'video' && upload.thumbnails && upload.thumbnails.generated
+    //            img.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.generated}` style="")
+    //
+    //        else if upload.fileType == 'video' && upload.thumbnails && upload.thumbnails.medium
+    //            img.preview-image(src=`${uploadServer}/${channelUrl || upload.uploader.channelUrl}/${upload.thumbnails.medium}` style="")
+    //
+    //        else if upload.fileType == 'video' && !upload.thumbnailUrl
+    //            img.preview-image(src="/no_img.png")
+    //
+    //        else if upload.fileType == 'image'
+    //            // TODO: have to fix this
+    //            img.preview-image(src=`${uploadServer}/${channelUrl|| upload.uploader.channelUrl }/${upload.uniqueTag}${upload.fileExtension}` style="")
+    //
+    //        else if upload.fileType == 'audio'
+    //            img.preview-image(src='/images/audio.svg')
+    //
+    //        else if upload.fileType == 'unknown'
+    //            img.preview-image(src='/images/no_img.png')
+    //
+    //        if ( upload.fileType == 'audio' || upload.fileType == 'video') && upload.formattedDuration
+    //            div.duration(style="height:26px;max-width:70px;text-align:center;position:absolute;bottom:0;right:0;background-color:black;opacity:0.9; padding: 3px; margin: 0 auto; border-radius: 5px")
+    //                span(style="color: white") #{upload.formattedDuration}
+    //
 
 
