allow video to have size changed

--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -282,3 +282,7 @@ style.
     .holder {
         overflow: hidden; /* [1.2] Hide the overflowing of child elements */
     }
+
+    .plyr.plyr--video {
+        resize: both;
+    }
