--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -273,6 +273,7 @@ style.
 
     .upload-thumbnail:hover {
         transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+        -webkit-filter: brightness(130%);
     }
 
     .upload-thumbnail {
