set max sizes for player

--- a/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
@@ -74,7 +74,7 @@ script.
 
   players[0].on('ready', function (event) {
     // set video max-height to 620px
-    $('.display-element').css('max-height', '620px');
+    // $('.display-element').css('max-height', '620px');
   });
 
   players[0].on('enterfullscreen', function (event) {
