--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -291,3 +291,25 @@ style.
         max-width: 99%;
         max-height: 96vh;
     }
+
+    .container {
+        max-width: 80%;
+    }
+
+    @media (min-width: 900px) {
+        .container {
+            width: inherit
+        }
+    }
+
+    @media (min-width: 1042px) {
+        .container {
+            width: inherit
+        }
+    }
+
+    @media (min-width: 1200px) {
+        .container {
+            width: inherit
+        }
+    }
