workingon the frontend

--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -146,9 +146,9 @@ style.
 
     .preview-image {
         width: inherit;
-        max-width: 324px;
-        height: 200px;
-        max-height: 200px;
+        max-width: 405px;
+        height: 250px;
+        max-height: 250px;
         border-radius: 7px;
     }
 
@@ -273,7 +273,9 @@ style.
 
     .upload-thumbnail:hover {
 
-        transform: scale(1.5) translate(0px, 30px);
+        transform: scale(1.3) translate(0px, 30px);
+
+        /*transform: scale(1.3);*/
 
         -webkit-filter: brightness(120%);
     }
@@ -312,4 +314,8 @@ style.
         .container {
             width: inherit
         }
+    }
+
+    .navbar-default .navbar-nav > li > a {
+        font-size: 18px;
     }
