--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -7,7 +7,7 @@ header.navbar.navbar-default.navbar-fixed-top(style="" id="header-color-blue")
         span.icon-bar
         span.icon-bar
       a.navbar-brand(href=`/`)
-        h5.brandName(style="color:white;margin-right:-10px;margin-top:0px;") #{brandName}
+        h5.brandName(style="color:white;margin-right:3px;margin-top:-3px;font-size:26px;") #{brandName}
     .collapse.navbar-collapse
       ul.nav.navbar-nav.front-header
         //li(class=(title == 'Home') ? 'active' : undefined)
