--- a/views/viewPartials/uploadDetails.pug
+++ b/views/viewPartials/uploadDetails.pug
@@ -12,19 +12,25 @@ style.
         text-decoration:underline;
     }
 
-// all the details including title
+div.underThing
+    // all the details including title
+    if ( upload.fileType == 'audio' || upload.fileType == 'video') && upload.formattedDuration
+        div.duration(style="display:inline;height:26px;max-width:70px;text-align:center;position:relative;bottom:0;right:0;background-color:black;opacity:0.5;margin: 0 auto;border-radius: 5px")
+            span(style="color: white;margin-right:7px;font-size:16px;") #{upload.formattedDuration}
+
+
+    if upload.fileType == 'video'
+        i.fa.fa-lg.fa-video-camera(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;")
+    else if upload.fileType == 'audio'
+        i.fa.fa-volume-up(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;")
+    else if upload.fileType == 'image'
+        i.fa.fa-picture-o(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;")
+
 
 // UPLOAD TITLE
 a.title-anchor(href=`/user/${upload.uploader.channelUrl || channelUrl}/${upload.uniqueTag}` style="color:black" target="_parent")
     div
         p.balance-text.upload-title-text(style="width:100%;margin:0 auto;margin-top:11px;margin-bottom:7px;color:gray;margin-top:0px;") #{upload.title} &nbsp
-
-            if upload.fileType == 'video'
-                i.fa.fa-video-camera(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;")
-            else if upload.fileType == 'audio'
-                i.fa.fa-volume-up(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;")
-            else if upload.fileType == 'image'
-                i.fa.fa-picture-o(aria-hidden='true' style="margin:0 auto;text-align:center;display:inline;")
 
 // shows view amount, username and if recent also time ago
 div.random-thing(style="margin-top:-4px;")
