--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -150,6 +150,7 @@ style.
         height: 250px;
         max-height: 250px;
         border-radius: 7px;
+        max-width:100%
     }
 
     /* translate thing to make it centered even with overflow*/
@@ -286,6 +287,7 @@ style.
 
     .holder {
         overflow: hidden; /* [1.2] Hide the overflowing of child elements */
+        max-width:450px;
     }
 
     .plyr.plyr--video {
