--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -19,7 +19,7 @@ header.navbar.navbar-default.navbar-fixed-top(style="" id="header-color-blue")
           if popularDefault == 'all'
             a(href=`/media/popular/1?within=24hour&category=all`) Popular
           else if popularDefault == 'overview'
-            a(href=`/media/popular/1?category=overview&within=1week`) Popular
+            a(href=`/media/popular/1?category=overview&within=24hour`) Popular
 
 
 
