--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -292,8 +292,12 @@ style.
 
     .plyr.plyr--video {
         resize: both;
+
         max-width: 99%;
         max-height: 96vh;
+
+        /*width: 1409px;*/
+        /*height: 799px;*/
     }
 
     .container {
