--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -274,9 +274,9 @@ style.
 
     .upload-thumbnail:hover {
 
-        transform: scale(1.3) translate(0px, 30px);
+        /*transform: scale(1.05) translate(0px, 30px);*/
 
-        /*transform: scale(1.3);*/
+        transform: scale(1.12);
 
         -webkit-filter: brightness(120%);
     }
