--- a/views/media.pug
+++ b/views/media.pug
@@ -29,7 +29,7 @@ block content
         br
         br
         if upload.fileType === 'video' && !upload.status !== 'processing'
-            div.display-div(style="min-width:50%;min-height:50%;margin:0 auto;margin-top:-32px;")
+            div.display-div.magnetic(style="min-width:50%;min-height:50%;margin:0 auto;margin-top:-32px;")
 
                 video#media_player.display-element(playsinline poster=`${serverToUse}/${upload.uploader.channelUrl}/${upload.thumbnails.generated || upload.thumbnails.medium}` controls='', style="max-width:100%;background-color:black;max-height:100vh")
                     // to
