more frontend changes

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -144,8 +144,10 @@ html
 
     block extra_footer_js
 
-    script.
-      $.magneticScroll();
+    //script.
+    //  $.magneticScroll({
+    //    speed: 1
+    //  });
 
 
     //script.
