--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -293,8 +293,11 @@ style.
     .plyr.plyr--video {
         resize: both;
 
-        max-width: 99%;
-        max-height: 96vh;
+        max-width: 100vw;
+        max-height: 100vh;
+
+        width: 100vw;
+        height: 82vh;
 
         /*width: 1409px;*/
         /*height: 799px;*/
