--- a/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
@@ -65,7 +65,7 @@ script.
     autoplay: autoplay,
     clickToPlay: true,
     speed: {selected: 1, options: [0.5, 0.75, 1, 1.25, 1.5, 1.75, 2]},
-    controls: ['play-large', 'play','progress', 'current-time', 'duration', 'fast-forward', 'mute', 'volume', 'settings', 'fullscreen'],
+    controls: ['play-large', 'play','progress', 'current-time', 'duration', 'rewind', 'fast-forward', 'mute', 'volume', 'settings', 'fullscreen'],
     settings: ['speed', 'captions', 'quality', 'loop']
   };
 
@@ -79,7 +79,7 @@ script.
 
   players[0].on('enterfullscreen', function (event) {
 
-    $('.display-element').css('max-height', "1vh")
+    // $('.display-element').css('max-height', "100vh")
 
 
     // remove video max-height
@@ -88,7 +88,7 @@ script.
 
   players[0].on('exitfullscreen', function (event) {
     // add max height
-     $('.display-element').css('max-height','97vh')
+     // $('.display-element').css('max-height','100vh')
   });
 
   $("[data-plyr=seek]").css('cursor','pointer')
