about to do auto theatre mode

--- a/views/nodeTubeCss.pug
+++ b/views/nodeTubeCss.pug
@@ -326,5 +326,9 @@ style.
     }
 
     .navbar-default .navbar-nav > li > a {
-        font-size: 18px;
+        font-size: 16px;
+    }
+
+    .brandName {
+        font-family: monospace;
     }
